@@ -2,6 +2,7 @@ gphoto2 2.3.0.2.trunk
 
   * Added --hook-script option, including man page update and test-hook.sh.
   * Fix: --get-all-metadata takes no argument.
+  * Use the "UNIX fd" based CameraFile handling code for saving files.
 
 gphoto2 2.3.0
 
